--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,15 @@ uuid = "4c422213-1242-4325-9ff2-ab065d5354a7"
 authors = ["Paul Bayer"]
 version = "0.1.0"
 
+[deps]
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+
 [compat]
 julia = "1.4"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Documenter", "Test"]
