--- a/Project.toml
+++ b/Project.toml
@@ -10,10 +10,11 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 julia = "^1.4"
 
 [extras]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Documenter", "Test", "SafeTestsets", "Printf"]
+test = ["Pkg", "Documenter", "Test", "SafeTestsets", "Printf"]
