--- a/Project.toml
+++ b/Project.toml
@@ -18,4 +18,4 @@ SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Pkg", "Documenter", "Test", "SafeTestsets", "Printf"]
+test = ["Pkg", "Documenter", "JSON3", "Test", "SafeTestsets", "Printf"]
