remove JSON3 dependency

--- a/Project.toml
+++ b/Project.toml
@@ -11,11 +11,10 @@ julia = "1.5"
 
 [extras]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Pkg", "Documenter", "JSON3", "Test", "SafeTestsets", "Printf"]
+test = ["Pkg", "Documenter", "Test", "SafeTestsets", "Printf"]
